solve problem with ThreadLocal, see CARRIER_LOCAL.md